center icon to prevent clipping

--- a/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
@@ -41,7 +41,7 @@
 			background-size: 17px 17px;
 			background-image: url('../images/search.svg');
 			background-repeat: no-repeat;
-			background-position: top 10px left 5px;
+			background-position: center center;
 
 			& svg {
 				display: none;
